--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/mruby"]
+[submodule "mruby"]
 	path = mruby
-	url = https://github.com/mruby/mruby
+	url = https://github.com/iij/mruby
